move the news-card into a component

--- a/theme/assets/styles/main.scss
+++ b/theme/assets/styles/main.scss
@@ -7,7 +7,7 @@
 // endbower
 @import "../../bower_components/font-awesome/scss/font-awesome.scss";
 
-@import "components/mixins";
+@import "common/mixins";
 @import "common/global";
 @import "common/fonts";
 @import "common/overload";
