--- a/theme/components/components.scss
+++ b/theme/components/components.scss
@@ -1,4 +1,6 @@
 @import '../assets/styles/common/variables';
+@import '../assets/styles/common/mixins';
+
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_mixins.scss";
 
