--- a/theme/components/NewsCard/news_card.scss
+++ b/theme/components/NewsCard/news_card.scss
@@ -7,14 +7,7 @@ $news-card-size: 300px;
   min-height: $news-card-size/2;
   overflow: hidden;
 
-  @media (max-width: $screen-sm-max) {
-    margin: 0 0 10px 0;
-  }
-
   flex: 1 0 $news-card-size;
-  @media (max-width: $screen-sm-max) {
-    flex: 1 0 100%;
-  }
 
   &:hover, &:active, &:focus {
     color: $gray;
@@ -26,52 +19,90 @@ $news-card-size: 300px;
     background-color: white;
     width: 100%;
 
-    transition: .3s;
+    transition: transform .3s;
   }
 
   .news-card__content-animated {
-    display: none;
-  }
+    display: block;
 
-  &.news-card--animated {
+    position: absolute;
+    top: 3*$news-card-size;
 
-    .news-card__caption {
-      position: absolute;
-      bottom: 0;
-    }
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 100%;
+    width: 100%;
 
-    .news-card__content {
-      display: none;
-    }
+    color: $gray-lighter;
 
-    .news-card__content-animated {
-      display: block;
-
-      position: absolute;
-      top: 3*$news-card-size;
-
-      padding: 15px;
-      background-color: rgba(0, 0, 0, 0.3);
-      height: 100%;
-      width: 100%;
-
-      color: $gray-lighter;
-
-      transition: .3s;
-    }
-
-    &:hover, &:active, &:focus {
-      .news-card__caption {
-        transform: translateY(100px);
-      }
-      .news-card__content-animated {
-        transform: translateY(-3*$news-card-size);
-      }
-    }
+    transition: transform .3s;
   }
 
   .news-card__thumb {
     width: 100%;
     height: auto
+  }
+
+  @media (min-width: $screen-sm-min) {
+
+    &.news-card--animated {
+      .news-card__caption {
+        position: absolute;
+        bottom: 0;
+      }
+
+      .news-card__content {
+        display: none;
+      }
+
+      &:hover, &:active, &:focus {
+        .news-card__caption {
+          transform: translateY(100px);
+        }
+        .news-card__content-animated {
+          transform: translateY(-3*$news-card-size);
+        }
+      }
+    }
+
+  }
+
+}
+
+@media (max-width: $screen-xs-max) {
+  .news-card {
+    margin: 0 -15px;
+    flex: 1 0 100%;
+
+    padding: 15px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @media (max-width: 400px) {
+      flex-wrap: wrap;
+    }
+
+
+    .news-card__content-animated {
+      display: none;
+    }
+
+    .news-card__thumb {
+      width: 200px;
+      margin-right: 15px;
+    }
+
+    .news-card__caption {
+      background: transparent;
+      padding: 0;
+    }
+
+    &:hover, &:active, &:focus {
+      background-color: $gray-light;
+      color: $gray-darker;
+    }
+
   }
 }
