--- a/theme/assets/styles/common/_global.scss
+++ b/theme/assets/styles/common/_global.scss
@@ -7,7 +7,8 @@ a:active {
 .content {
 }
 
-body.sidebar-primary {
+body.sidebar-primary,
+body.page:not(.home) {
   .main,
   .sidebar {
     padding-top: 50px;
