--- a/theme/assets/styles/layouts/_pages.scss
+++ b/theme/assets/styles/layouts/_pages.scss
@@ -1,7 +1,8 @@
 .page-header {
-  padding-bottom: 0;
-  margin: 0;
-  border-bottom: none;
+  h1, h2, h3 {
+    font-family: Roboto;
+    font-weight: bold;
+  }
 }
 
 .page {
