menu underline the size of the label

--- a/theme/components/Navbar/navbar.scss
+++ b/theme/components/Navbar/navbar.scss
@@ -114,7 +114,8 @@
     > a {
       display: inline-block;
       border-bottom: 5px solid transparent;
-      padding: 10px 30px;
+      padding: 10px 0;
+      margin: 0 30px;
 
       text-transform: uppercase;
 
