Revert 092feef3c765291e6a7ac379304a200c4f68c03e.

--- a/theme/components/Navbar/navbar.scss
+++ b/theme/components/Navbar/navbar.scss
@@ -11,6 +11,8 @@
   padding: 0 10px;
   position: relative;
 
+  border-bottom: 1px solid $gray-light;
+
   .nd-navbar__item {
     display: inline-block;
     min-width: 150px;
