--- a/theme/components/NewsCard/news_card.scss
+++ b/theme/components/NewsCard/news_card.scss
@@ -9,6 +9,9 @@ $news-card-size: 300px;
 
   flex: 1 0 $news-card-size;
 
+  background-size: cover;
+  background-position: center;
+
   &:hover, &:active, &:focus {
     color: $gray;
   }
@@ -40,7 +43,8 @@ $news-card-size: 300px;
 
   .news-card__thumb {
     width: 100%;
-    height: auto
+    height: auto;
+    opacity: 0;
   }
 
   @media (min-width: $screen-sm-min) {
@@ -80,6 +84,8 @@ $news-card-size: 300px;
     align-items: center;
     justify-content: center;
 
+    background-image: none !important;
+
     @media (max-width: 400px) {
       flex-wrap: wrap;
     }
@@ -92,6 +98,7 @@ $news-card-size: 300px;
     .news-card__thumb {
       width: 200px;
       margin-right: 15px;
+      opacity: 1;
     }
 
     .news-card__caption {
