--- a/theme/assets/styles/pages/_frontpage_social.scss
+++ b/theme/assets/styles/pages/_frontpage_social.scss
@@ -35,6 +35,7 @@ $social-colors: (
   display: flex;
   border-right: 1px solid $gray-lighter;
   border-bottom: 1px solid $gray-lighter;
+  justify-content: space-around;
 }
 .social-networks-section-item {
   display: flex;
@@ -101,17 +102,18 @@ a[href].social-networks-section-item {
     transition: transform .3s ease-in-out;
   }
 
-  &:hover,
-  &:active,
-  &:focus {
-    text-decoration: none;
-    * {
-      transform: translateY(-8px);
+  @media (min-width: $screen-sm-min) {
+    &:hover,
+    &:active,
+    &:focus {
+      text-decoration: none;
+      * {
+        transform: translateY(-8px);
+      }
+      &:before {
+        transform: translateY(0);
+      }
     }
-    &:before {
-      transform: translateY(0);
-    }
-
   }
 }
 @each $social in $socials {
@@ -134,5 +136,14 @@ a[href].social-networks-section-item {
 @media (max-width: $screen-md-max) {
   .social-networks-section {
     flex-wrap: wrap;
+  }
+}
+
+@media (max-width: $screen-xs-max) {
+  .social-networks-section-item{
+    height: 70px;
+  }
+  .social-networks-section-item__name {
+    display: none;
   }
 }
