--- a/theme/assets/styles/components/_section.scss
+++ b/theme/assets/styles/components/_section.scss
@@ -15,6 +15,10 @@
     font-size: 45px;
     margin: 0;
     margin-bottom: 20px;
+
+    @media (max-width: $screen-xs-max) {
+      font-size: 30px;
+    }
   }
 
   .section__content {
