--- a/theme/assets/styles/common/_variables.scss
+++ b/theme/assets/styles/common/_variables.scss
@@ -2,8 +2,7 @@
 $icon-font-path:        "../fonts/";
 
 // Grid settings
-$main-sm-columns:       12;
-$sidebar-sm-columns:    4;
+$sidebar-md-columns:    4;
 
 // Font-size and line-height
 $base-size: 14px;
@@ -35,3 +34,5 @@ $gray-light:   #EBEBEB;
 $gray-lighter: #F7F7F7;
 
 $navbar-height: 70px;
+
+$padding-base: 15px;
