sidebar in a card

--- a/theme/assets/styles/common/_global.scss
+++ b/theme/assets/styles/common/_global.scss
@@ -9,8 +9,7 @@ a:active {
 
 body.sidebar-primary,
 body.page:not(.home) {
-  .main,
-  .sidebar {
+  .main {
     padding-top: 30px;
     padding-bottom: 30px;
   }
