style table and h1 in post and pages

--- a/theme/assets/styles/main.scss
+++ b/theme/assets/styles/main.scss
@@ -11,6 +11,7 @@
 @import "common/global";
 @import "common/fonts";
 @import "common/overload";
+@import "common/user_content";
 @import "components/agenda";
 @import "components/buttons";
 @import "components/comments";
