styling the gallery post and add unstyled post pagination

--- a/theme/assets/styles/layouts/_posts.scss
+++ b/theme/assets/styles/layouts/_posts.scss
@@ -139,7 +139,7 @@ body.single-post{
 }
 
 article.page.type-page,
-article.post.format-standard {
+article.post {
   margin-bottom: 40px;
   header {
     display: table;
