--- a/theme/assets/styles/components/_agenda.scss
+++ b/theme/assets/styles/components/_agenda.scss
@@ -77,6 +77,13 @@
         @extend .panel-heading;
         background-color: transparent;
       }
+      .agenda__event-city {
+        font-size: 12px;
+        color: #777777;
+        i {
+          margin-right: 3px;
+        }
+      }
       .agenda__event-title {
         @extend .panel-title;
         font-size: $font-size-base;
